CHANGES IN FLTK 1.1.4

	- Added the OSX-specific fl_open_callback() function to
	  handle Open Documents messages from the Finder (STR
	  #pending)
	- The configure script contained erroneous whitespace in
	  various tests which caused errors on some platforms
	  (STR #60)
	- The fltk-config script still supported the deprecated
	  --prefix and --exec-prefix options; dropped them since
	  they serve no useful purpose and would never have
	  worked for the intended purpose anyways... (STR #56)
	- fl_filename_list returned 0 on Win32 if no directory
	  existed (STR #54)
	- Pressing 'home' after the last letter in a Text_Editor
	  would move the cursor to pos 0 (STR #39)
	- Fl::get_key(x) would mix up Ctrl and Meta on OS X (STR
	  #55)
	- The configure script used the wrong dynamic library
	  linking command for OSX (STR #51)
	- The Fl_Text_Editor widget did not set changed() nor
	  did it call the widget's callback function for
	  FL_WHEN_CHANGED when processing characters that
	  Fl::compose() handles (STR #52)


CHANGES IN FLTK 1.1.4rc1

	- The file chooser did not reset the click count when
	  changing directories; if you clicked on a file in the
	  same position after changing directories with a
	  double-click, the chooser treated it as a triple
	  click (STR #27)
	- Symbols with outlines did not get drawn inactive.
	- The Fl_Help_View widget now provides a find() method
	  to search for text within the page.
	- The Fl_Help_Dialog widget now provides a search box
	  for entering text to search for.
	- The default font encoding on OSX did not match the
	  default on WIN32 or X11.
	- Menu items were not drawn using the font specified in
	  the Fl_Menu_Item structure (STR #30)
	- Long menus that were aligned such that the top of an
	  item was exactly at the top of the screen would not
	  scroll (STR #33)
	- The OS issues appendix incorrectly stated that MacOS
	  8.6 and 9 were supported; they are not (STR #28)