@@ -1,5 +1,7 @@
 CHANGES IN FLTK 1.1.4
 
+	- Apple-C/X/V/Z didn't work in the Fl_Input widget due
+	  to a bad mapping to control keys (STR #pending)
 	- Added the OSX-specific fl_open_callback() function to
 	  handle Open Documents messages from the Finder (STR
 	  #pending)
